[gd_scene load_steps=3 format=3 uid="uid://b1f2g3h4i5j6"]

[ext_resource type="Script" path="res://scripts/components/joker_shop_item.gd" id="1_abcde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyz"]
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="JokerShopItem" type="PanelContainer"]
custom_minimum_size = Vector2(300, 400)
theme_override_styles/panel = SubResource("StyleBoxFlat_xyz")
script = ExtResource("1_abcde")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Joker Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="IconTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
autowrap_mode = 3

[node name="UnlockLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Unlock: ????"
autowrap_mode = 3

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Buy"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
